tests/failing/unfinished_token_stream_2.dodo
// Expected: Token stream out of bounds 

fn main() {
    test
